Fix slighly broken layout

--- a/styles.css
+++ b/styles.css
@@ -150,17 +150,6 @@ form li > label {
     padding: 2rem;
 }
 
-form button {
-    margin-top: 1.5rem;
-    padding: 10px;
-    width: max(120px, 10rem);
-    background-color: #596D48;
-    border: none;
-    color: white;
-    font-weight: bold;
-    box-shadow: 0px 3px 5px 1px #bababa9c;
-}
-
 form li input {
     padding: 5px;
     border: 1px solid #E5E7EB;
@@ -173,8 +162,29 @@ form li input:focus {
     box-shadow: 3px 2px 4px 0px #7b7b7bba;
 }
 
+form li input:not(:placeholder-shown, :focus):invalid {
+    border-color: #e43124;
+}
+
 .form-container div:last-child a {
     text-decoration: none;
     color: #596D48;
     font-weight: bold;
+}
+
+form button {
+    margin-top: 1.5rem;
+    padding: 10px;
+    width: max(120px, 10rem);
+    border-radius: 5%/25%;
+    background-color: #596D48;
+    border: none;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0px 3px 5px 1px #bababa9c;
+}
+
+form button:focus {
+    transform: scale(1.05);
+    transition: 0.5s;
 }
